[tool.poetry]
name = "get-website-agentql"
version = "0.1.0"
description = ""
authors = ["jayfish0 <jason@tinyfish.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.46.0"
agentql = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
